--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,80 @@ header .nav-logo span {
     }
 }
 
+.about .container {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10rem;
+}
+
+.image {
+    border-radius: 100px;
+}
+
+.about .content h2 {
+    font-size: 2rem;
+    text-transform: capitalize;
+    margin-bottom: 2rem;
+}
+
+.about .content h2 span {
+    color: #7700ff;
+}
+
+body,
+html {
+    font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
+}
+
+.skills .skills-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem 2rem;
+    flex-wrap: wrap;
+    max-width: 80%;
+    margin: auto;
+}
+
+.skills .skills-wrapper span {
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 300;
+}
+
+.skills .container {
+    display: grid;
+    text-align: center;
+    gap: 2rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+
+}
+
+.skills h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    border-bottom: 5px solid #7700ff;
+    width: fit-content;
+    margin: auto;
+    padding-bottom: 1rem;
+
+}
+
+.skills .skills-wrapper i {
+    font-size: 0.5rem;
+}
+
+@media screen and (max-width:768px) {
+    .skills .skills-wrapper span {
+        font-size: 1.5rem;
+    }
+}
+
 /*1200px
  992px
  768px
